--- a/main.css
+++ b/main.css
@@ -1,25 +1,48 @@
-* {
-    margin: 0; 
-    padding: 0; 
-}
-
 body {
-    background-color: #88B3C2; 
+  background-color: rgb(75, 75, 75); 
 }
 
 .container {
-    background-color: #8FCCCC; 
+  font-family: 'Open Sans', sans-serif;
+  display:grid; 
+  grid-gap: 3px; 
+  background-color: rgb(75, 75, 75);   
 }
 
 .topbanner {
-    background-color: #88B5A8; 
-    font-family: 'Volkhov', serif;
+  text-align: center; 
+  background-color: #C3D2DE; 
+  font-family: 'Volkhov', serif;
+  color: rgb(39, 39, 39); 
 }
 
 .maincontent {
-    background-color:#8FCCA9; 
+  background-color:#c8dacf; 
+  padding: 1em; 
 }
 
 .footer {
-    background-color: #88C290; 
+  color: whitesmoke; 
+}
+
+.prompt_tool {
+  display: grid; 
+  grid-template-columns: 1fr 4fr;
+}
+
+button {
+  padding: 0.5em;
+  border-style: none; 
+
+}
+
+.prompt_input {
+  background-color: red;
+  text-align: center; 
+  padding: 1em; 
+}
+
+.prompt_output {
+  background-color: green; 
+  padding: 1em; 
 }
